--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
-    "init": "mkdir ./modules/lambda/opt; rm -rf ./modules/lambda/opt/*.js; cp ./modules/services/code/*.js ./modules/lambda/opt",
+    "init": "mkdir ./modules/lambda/opt; rm -rf ./modules/lambda/opt/*.js; cp ./modules/services/code/*.js ./modules/lambda/opt; rm ./modules/lambda/opt/*.test.js",
     "test": "jest",
     "deploy": "zsh ./scripts/deploy.sh",
     "build": "zsh ./scripts/build.sh",
@@ -15,6 +16,10 @@
   "author": "crspradlin",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/eslint-parser": "^7.15.7",
+    "@babel/preset-env": "^7.15.6",
+    "eslint-plugin-jest": "^24.4.2",
     "jest": "^27.2.0"
   },
   "dependencies": {
