--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@babel/eslint-parser": "^7.15.7",
     "@babel/preset-env": "^7.15.6",
     "eslint-plugin-jest": "^24.4.2",
-    "jest": "^27.2.0"
+    "jest": "^27.2.0",
+    "eslint": "^7.32.0"
   },
   "dependencies": {
     "aws-sdk": "^2.991.0",
-    "eslint": "^7.32.0"
+    "uuid": "^8.3.2"
   }
 }
