Updated sendMessage to send a message to convo

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 auth.tf
-.terraform
-.terraform.lock.hcl
-node_modules
-temp
+backend.tf
+
 *.tfstate
 *.tfstate.lock.info
 *.backup
 *.tfvars
+.terraform
+.terraform.lock.hcl
+
+.vscode
+node_modules
+temp
 opt
 coverage
-.vscode
