--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "form-layers": "mkdir ./modules/lambda/opt; rm -rf ./modules/lambda/opt/*.js; cp ./modules/services/code/*.js ./modules/lambda/opt; rm ./modules/lambda/opt/*.test.js",
     "test": "npm run form-layers; jest . --coverage",
     "deploy": "zsh ./scripts/deploy.sh",
-    "build": "zsh ./scripts/build.sh",
+    "build": "zsh ./scripts/build.sh && cd ./aws && terraform plan -var-file=variables.tfvars",
     "destroy": "cd aws; terraform destroy -var-file=variables.tfvars",
     "apply": "cd aws; terraform apply -var-file=variables.tfvars",
     "lint": "eslint .",
